--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linear Algebra Visualizations | Murillo Group MSU</title>
+    <title>Linear Algebra for Data Science Visualizations | Prof. Murillo, MSU</title>
     <style>
         :root {
             --msu-green: #18453B;
