--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     </main>
 
     <footer class="footer">
-        <p>Created by the Murillo Group at Michigan State University</p>
+        <p>Prof. Murillo, Michigan State University</p>
     </footer>
 </body>
 </html>
