--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Linear Algebra Visualizations</h1>
+        <h1>Linear Algebra for Data Science Visualizations</h1>
         <p>Interactive tools for understanding matrix decompositions and transformations</p>
     </header>
 
