--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linear Algebra for Data Science Visualizations | Prof. Murillo, MSU</title>
+    <title>Linear Algebra Visualizations for Data Science  | Prof. Murillo, MSU</title>
     <style>
         :root {
             --msu-green: #18453B;
@@ -114,7 +114,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Linear Algebra for Data Science Visualizations</h1>
+        <h1>Linear Algebra Visualizations for Data Science </h1>
         <p>Interactive tools for understanding matrix decompositions and transformations</p>
     </header>
 
