--- a/svd/index.html
+++ b/svd/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Singular Value Decomposition | MSU</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.4.4/math.js"></script>
+
+
+    console.log('Math.js version:', math ? math.version : 'not loaded');
+
+    // Test basic SVD functionality
+    try {
+        const testMatrix = [[1, 2], [3, 4]];
+        const testSVD = math.svd(testMatrix);
+        console.log('Test SVD works:', testSVD);
+    } catch (error) {
+        console.error('SVD test failed:', error);
+    }
+    
     <style>
         :root {
             --msu-green: #18453B;
@@ -230,6 +243,7 @@
             const correlation = 0.8;
             const x = Array.from({length: n}, () => Math.random() * 2 - 1);
             const y = x.map(val => val * correlation + (Math.random() * 0.5 - 0.25));
+            console.log('Generated data - x:', x.slice(0,5), 'y:', y.slice(0,5)); // Show first 5 points
             return [x, y];
         }
 
