--- a/svd/index.html
+++ b/svd/index.html
@@ -230,7 +230,7 @@
             </div>
         </div>
     </div>
-
+    <circle cx="0" cy="0" r="5" fill="red"/>
     <script>
         let currentStep = 0;
         let isPlaying = false;
